Added response for mission control

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-    <p>Radio check. Pilot, please confirm.</p>
+    <p>Radio check. Control, please confirm that I am communicating this correctly! I am not being very creative with this - over!.</p>
 </body>
 
 </html>
