created new element and responded to pilot

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 
 <body>
-    <p>Radio check. Control, please confirm that I am communicating this correctly! I am not being very creative with this - over!.</p>
+    <p>Radio check. Control, please confirm that I am communicating this correctly! I am not being very creative with
+        this - over!.</p>
+    <section>
+        <p>
+            Read you loud and clear pilot. Excellent job!
+        </p>
+    </section>
 </body>
 
 </html>
