Practicing saving with command s

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <p>
             Read you loud and clear pilot. Excellent job!
         </p>
+
+        <p>
+            This is me editing and practicing pushing and pulling with my Control!!
+        </p>
     </section>
 </body>
 
