responded to control with MAC statement

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <p>
             This is me editing and practicing pushing and pulling with my Control!!
         </p>
+        <p>
+            Great work with Command S, Mac is so tricky. I gave up years ago.
+        </p>
     </section>
 </body>
 
