adding the index now since i messed up

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
 <body>
     <p>Radio check. Control, please confirm that I am communicating this correctly! I am not being very creative with
         this - over!.</p>
